Your embedded frontend + backend architecture handles CORS automatically! 🎉